--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=todo
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
